# django-autosequence

./: .bumpversion.cfg  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  Pipfile  README.rst  manage.py  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
autosequence/: __init__.py  fields.py  helpers.py
autosequence/tests/: models.py  tests.py
docs/: autosequence.rst  conf.py  index.rst  installation.rst  modules.rst  usage.rst
tests/: models.py  settings.py  test_autosequence.py  urls.py  views.py
