[tool.poetry]
name = "django-autosequence"
version = "0.5.0"
description = "A Django model field providing a configurable automatic sequence of values."
authors = ["Andrew Cordery <cordery@gmail.com>"]
license = "MIT"
repository = "https://github.com/cordery/django-autosequence"
keywords = ['Django']
classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Django',
    'Framework :: Django :: 2.2',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
]
include = ["LICENSE", "*.rst"]
packages = [
    {include = "autosequence"}
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"

[tool.poetry.dev-dependencies]
aiohttp = "^3.5"
pytest-asyncio = "^0.10.0"
pytest = "^4.6"
pytest-cov = "^2.7"
pytest-django = "^3.5"
pytest-mock = "^1.10"
coverage = "^4.5"
bumpversion = "^0.5.3"
psycopg2 = "^2.8"
sphinx = "^2.1"
tox = "^3.12"
flake8 = "^3.7"

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True
isolated_build = true
envlist =
    {py36,py37}-django2

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
