[tool.poetry]
name = "django-autosequence"
version = "0.7.0"
description = "A Django model field providing a configurable automatic sequence of values."
authors = ["Andrew Cordery <cordery@gmail.com>"]
license = "MIT"
repository = "https://github.com/cordery/django-autosequence"
keywords = ['Django']
classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Django',
    'Framework :: Django :: 2.2',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
]
include = ["LICENSE", "*.rst"]
packages = [
    {include = "autosequence"}
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2 || ^3"

[tool.poetry.dev-dependencies]
aiohttp = "*"
pytest-asyncio = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-mock = "*"
coverage = "*"
bumpversion = "*"
psycopg2 = "^2"
tox = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
