[tool.poetry]
name = "django-autosequence"
version = "0.7.0"
description = "A Django model field providing a configurable automatic sequence of values."
authors = ["Andrew Cordery <cordery@gmail.com>"]
license = "MIT"
repository = "https://github.com/cordery/django-autosequence"
keywords = ['Django']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
include = ["LICENSE", "*.rst"]
packages = [
    { include = "autosequence" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
django = ">=2.2"

[tool.poetry.dev-dependencies]
aiohttp = "*"
pytest-asyncio = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-mock = "*"
coverage = "*"
bump2version = "^1.0.1"
psycopg2 = "^2"
tox = "^3.24"
flake8 = "*"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.3"}


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
